edit feature added

--- a/index.html
+++ b/index.html
@@ -8,14 +8,8 @@
     <script src="https://kit.fontawesome.com/8dd8a19338.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="main">
-        <h2>To do app <i id="icon" class="fa-solid fa-calendar-check"></i></h2>
-        <div class="input">
-            <input type="text" placeholder="Enter your task" id="input">
-            <button onclick="Add()">Add</button>
-        </div>
-        <div class="task">
-      </div>
+    <div class="main" id="main">
+        
     </div>
     <script src="./main.js"></script>
 </body>
